--- a/public/css/homeStyle.css
+++ b/public/css/homeStyle.css
@@ -493,8 +493,16 @@ p{
     font-weight: 600;
 }
 
+.detailsBtns{
+    display: flex;
+}
+
+.detailsBtns form{
+    width: 150px;
+}
+
 .detailsBtns button{
-    width: 35%;
+    width: 90%;
     height: auto;
     aspect-ratio: 1/0.3;
     border-radius: 3px;
