--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -19,7 +19,7 @@
         <div class="cartMainSection">
 
         <div class="cartSectionBox1">
-            <div class="shoppingCartText"><h2>Shopping Cart</h2><span class="itemsNumberInCart">2 items</span></div>
+            <div class="shoppingCartText"><h2>Shopping Cart</h2><span class="itemsNumberInCart"><%=totalCartProducts%> items</span></div>
 
             <table class="cartTable">
                 <thead>
