Add login feature at backend

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -301,11 +301,11 @@
                 <h2>User <span class="loginTitle">Login</span>  <span class="signupTitle">Sign Up</span></h2>
                 <form class="loginForm newUserForm" method="POST" action="/product/user/login">
                     <label for="email"> Email <br>
-                    <input type="email" placeholder="type here" id="email" name="user[email]" required>
+                    <input type="email" placeholder="type here" id="email" name="email" required>
                     </label>
 
                     <label for="password">Password <br>
-                    <input type="password" placeholder="type here" id="password" name="user[password]" required>
+                    <input type="password" placeholder="type here" id="password" name="password" required>
                     </label>
                     <p class="formTextLinks">
                         Create an account? <span class="formRedirection">click here</span>
