Add authorization feature using middlewares

--- a/views/Products.ejs
+++ b/views/Products.ejs
@@ -16,6 +16,8 @@
         <%- include("includes/header.ejs")%>
 
         <main class="homeMainSection">
+
+            <%- include("includes/flash.ejs")%>
             
             <div class="imageBox">
 
@@ -35,7 +37,7 @@
                     <h2>Categories</h2>
                     <div class="categories">
 
-                        <a href="product/3423423" style="text-decoration: none; color: rgb(0, 0, 0);">
+                        <a href="#" style="text-decoration: none; color: rgb(0, 0, 0);">
                         <div class="category">
                             <img src="https://greencart-gs.vercel.app/assets/organic_vegitable_image-B6WcGgPL.png">
                             <p>Organic Veggies</p>
