--- a/views/allProducts.ejs
+++ b/views/allProducts.ejs
@@ -32,7 +32,7 @@
                                 <p class="bestSellingProductOldPrice">$<%=product.oldPrice%></p>
                                 </div>
 
-                                <form method="POST" action="/product/<%=product.productId%>">
+                                <form method="POST" action="/product/<%=product.productId%>/add">
                                 <div class="buttons">
                                     <button class="AddButton"><i class="fa-solid fa-cart-shopping" style="color: #2f7052;"></i> <span>Add </span></button>
                                 </div>
