--- a/views/Product/Products.ejs
+++ b/views/Product/Products.ejs
@@ -13,11 +13,11 @@
 </head>
 <body>
         <!-- Navbar -->
-        <%- include("includes/header.ejs")%>
+        <%- include("../includes/header.ejs")%>
 
         <main class="homeMainSection">
 
-            <%- include("includes/flash.ejs")%>
+            <%- include("../includes/flash.ejs")%>
             
             <div class="imageBox">
 
@@ -222,6 +222,6 @@
         </main>
 
         <!-- footer -->
-        <%- include('includes/footer.ejs')%>
+        <%- include('../includes/footer.ejs')%>
 </body>
 </html>
