--- a/views/Product/relatedProducts.ejs
+++ b/views/Product/relatedProducts.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../public/css/homeStyle.css">
 </head>
 <body>
-    <%- include('includes/header.ejs')%>
+    <%- include('../includes/header.ejs')%>
 
     <div class="relatedProductsBox">
         <p class="relatedProductTitle">Organic Vegies</p>
@@ -57,6 +57,6 @@
 
    
 
-    <%- include('includes/footer.ejs')%>
+    <%- include('../includes/footer.ejs')%>
 </body>
 </html>
