--- a/views/Product/addAddress.ejs
+++ b/views/Product/addAddress.ejs
@@ -11,7 +11,7 @@
     <title>Grocify</title>
 </head>
 <body>
-    <%- include('includes/header.ejs') %>
+    <%- include('../includes/header.ejs') %>
 
     <main class="homeMainSection">
 
@@ -56,6 +56,6 @@
 
     </main>
 
-    <%- include('includes/footer.ejs')%>
+    <%- include('../includes/footer.ejs')%>
 </body>
 </html>
