--- a/views/Product/productDetails.ejs
+++ b/views/Product/productDetails.ejs
@@ -11,7 +11,7 @@
     <title>Grocify</title>
 </head>
 <body>
-    <%- include('includes/header.ejs')%>
+    <%- include('../includes/header.ejs')%>
     
     <main class="homeMainSection productDetailsMainSection">
 
@@ -87,6 +87,6 @@
 
     </main>
 
-    <%- include('includes/footer.ejs')%>
+    <%- include('../includes/footer.ejs')%>
 </body>
 </html>
